--- a/planner.css
+++ b/planner.css
@@ -34,7 +34,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid lightgray;;
 }
 
 .hour {
