--- a/planner.css
+++ b/planner.css
@@ -43,19 +43,19 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
-.past {
+.past-hour {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
-.present {
+.present-hour {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
-.future {
+.future-hour {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
@@ -77,3 +77,18 @@ textarea{
  .lead {
    margin-top: 25px;
  }
+
+ #footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000;
+  color: white;
+  text-align: center;
+}
+
+#github {
+    height: 35px;
+    width: 35px;
+}
