--- a/planner.css
+++ b/planner.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Patrick Hand', cursive;
   font-size: 16px;
   line-height: 1;
   background-color: lightgray;
