--- a/planner.css
+++ b/planner.css
@@ -80,13 +80,15 @@ textarea{
  }
 
  #footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: #000000;
   color: white;
   text-align: center;
+  margin-bottom: 0px;
+
 }
 
 #github {
@@ -97,3 +99,8 @@ textarea{
 h6 {
   font-size: 20px;
 }
+
+#footerName {
+  font-size: 17px;
+}
+
